Login new design and fixing bugs

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,24 +13,33 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
-            android:text="Sign In"
-            android:textColor="@android:color/black"
-            android:textSize="35sp"
-            android:textStyle="bold" />
+            app:srcCompat="@drawable/screenshot_2023_06_25_at_18_35_1" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+
             android:layout_marginHorizontal="15dp"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp"
+                android:layout_marginHorizontal="10dp"
+                android:text="Login"
+                android:paddingBottom="20dp"
+                android:textColor="@android:color/black"
+                android:textSize="35sp"
+                android:textStyle="bold" />
+
+         <!--   <TextView
                 android:id="@+id/editTextTextPersonName2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -38,14 +47,16 @@
                 android:text="Email:"
                 android:textColor="@android:color/black"
                 android:textSize="21sp" />
-
+-->
             <EditText
                 android:id="@+id/signin_email"
                 android:layout_width="match_parent"
-                android:layout_height="37dp"
+                android:layout_height="50dp"
                 android:ems="10"
+                android:hint="Email"
                 android:paddingHorizontal="10dp"
                 android:textColorLink="@color/black"
+                android:layout_marginHorizontal="10dp"
                 android:background="@drawable/edittext_background"
                 android:inputType="textEmailAddress" />
 
@@ -58,20 +69,22 @@
             android:layout_marginHorizontal="15dp"
             android:orientation="vertical">
 
-            <TextView
+          <!--  <TextView
                 android:id="@+id/te"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="Password:"
                 android:textColor="@android:color/black"
-                android:textSize="21sp" />
+                android:textSize="21sp" />-->
 
             <EditText
                 android:id="@+id/signin_pass"
                 android:layout_width="match_parent"
-                android:layout_height="37dp"
+                android:layout_height="50dp"
                 android:ems="10"
+                android:hint="Password"
+                android:layout_marginHorizontal="10dp"
                 android:paddingHorizontal="10dp"
                 android:textColorLink="@color/black"
                 android:background="@drawable/edittext_background"
@@ -83,27 +96,61 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
-            <Button
+           <!-- <Button
                 android:id="@+id/signup"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="goToOrgOrActActivity"
-                android:text="Sign Up" />
+                android:text="Sign Up" />-->
 
             <Button
                 android:id="@+id/signin"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_weight="1"
                 android:layout_marginStart="10dp"
                 android:onClick="goToHome"
-                android:text="Sign In" />
+                android:text="Login"
+                android:textSize="20sp"/>
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/doaccounthave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp"
+                android:text="Do you have an account?  "
+                android:paddingBottom="20dp"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"
+                />
+            <TextView
+                android:id="@+id/createnewaccount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp"
+                android:text="@string/create_new_account"
+                android:paddingBottom="20dp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                />
+
+
+
+        </LinearLayout>
+
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
