--- a/app/src/main/res/drawable/colorful_background.xml
+++ b/app/src/main/res/drawable/colorful_background.xml
@@ -2,9 +2,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#8A2BE2"
-                android:centerColor="#DA70D6"
-                android:endColor="#00BFFF"
+                android:startColor="#FFFFFF"
+                android:endColor="#FFFFFF"
                 android:angle="45" />
         </shape>
     </item>
