--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,8 +16,11 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="10dp"
             app:srcCompat="@drawable/screenshot_2023_06_25_at_18_35_1" />
 
+<!--
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
@@ -29,6 +32,7 @@
             android:textStyle="bold"
             android:layout_marginLeft="55dp"
             android:layout_marginBottom="10dp"/>
+-->
 
         <EditText
             android:id="@+id/signup_email"
@@ -102,10 +106,10 @@
         <TextView
             android:id="@+id/checkBoxText"
             android:textAlignment="textStart"
-            android:textColor="@color/AntiqueWhite"
             android:clickable="true"
             android:onClick="OpenTermsAndGuidelines"
             android:layout_width="wrap_content"
+            android:textColor="@color/black"
             android:layout_height="wrap_content"
             android:paddingRight="5dp"
             android:text="@string/checkBoxText"
@@ -115,7 +119,7 @@
             android:id="@+id/signup"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Submit"
+            android:text="Sign Up"
             android:textColor="@android:color/white"
             android:onClick="goToHome"
             android:padding="12dp"/>
