--- a/app/src/main/res/layout/activity_edit_profile_picture.xml
+++ b/app/src/main/res/layout/activity_edit_profile_picture.xml
@@ -28,14 +28,25 @@
             android:layout_centerHorizontal="true" />
 
         <Button
-            android:id="@+id/change_picture_button"
+            android:id="@+id/select_image_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/profile_image_view"
-            android:layout_alignEnd="@+id/profile_image_view"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="13dp"
-            android:text="Change Picture" />
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="68dp"
+            android:layout_marginEnd="122dp"
+            android:text="Select Image" />
+
+        <Button
+            android:id="@+id/camera_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="175dp"
+            android:layout_marginEnd="101dp"
+            android:text="Capture Photo" />
+
 
         <!-- Add any additional UI elements as needed -->
 
