--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -8,32 +8,35 @@
         layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="6dp" />
+        android:layout_alignParentBottom="true" />
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="129dp">
+
 
 
         <ImageView
             android:id="@+id/profileImageView"
             android:layout_width="117dp"
             android:layout_height="106dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="36dp"
-            android:layout_marginBottom="7dp"
-            android:layout_toStartOf="@+id/followersTextView" />
+            android:layout_centerHorizontal="true"
+            />
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="120dp"
+        android:gravity="center_horizontal"
+
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/followersTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/followingTextView"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="171dp"
-            android:layout_marginBottom="1dp"
+
             android:lines="2"
             android:maxLines="2"
             android:text="Followers \n        0"
@@ -43,11 +46,7 @@
             android:id="@+id/followingTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginLeft="164dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="80dp"
+            android:layout_marginLeft="30dp"
             android:lines="2"
             android:maxLines="2"
             android:text="Following\n       0"
@@ -57,15 +56,30 @@
             android:id="@+id/postsTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/followingTextView"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="21dp"
-            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="30dp"
             android:lines="2"
             android:maxLines="2"
             android:text="Posts\n    0"
             android:textSize="16sp" />
-    </RelativeLayout>
+
+    </LinearLayout>
+
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="200dp"
+    android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/userNameTextView"
+        android:layout_width="185dp"
+        android:layout_height="150dp"
+        android:gravity="center_horizontal"
+        android:text="User Name"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+</LinearLayout>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -83,18 +97,7 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/userNameTextView"
-        android:layout_width="185dp"
-        android:layout_height="150dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="107dp"
-        android:layout_marginBottom="275dp"
-        android:gravity="center_horizontal"
-        android:text="User Name"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+
 
 
 </RelativeLayout>
