--- a/app/src/main/res/layout/bottom_navigation.xml
+++ b/app/src/main/res/layout/bottom_navigation.xml
@@ -10,9 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="#fff1a1"
         android:layout_alignParentBottom="true">
 
         <ImageButton
+            android:background="@null"
             android:id="@+id/nav_home"
             android:layout_width="0dp"
             android:layout_height="50dp"
@@ -20,17 +22,9 @@
             android:src="@drawable/home"
             android:scaleType="centerInside"
             android:onClick="onNavHomeClick"
+            android:padding="10dp"
             />
 
-        <ImageButton
-            android:id="@+id/nav_search"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="0.7"
-            android:src="@drawable/search"
-            android:scaleType="centerInside"
-            android:onClick="onNavSearchClick"
-            />
 
         <ImageButton
             android:id="@+id/nav_addPost"
@@ -40,17 +34,10 @@
             android:src="@drawable/more"
             android:scaleType="centerInside"
             android:onClick="onNavAddPostClick"
+            android:background="@null"
+            android:padding="10dp"
             />
 
-        <ImageButton
-            android:id="@+id/nav_video"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="0.7"
-            android:src="@drawable/video"
-            android:scaleType="centerInside"
-            android:onClick="onNavVideoClick"
-            />
 
 
         <ImageButton
@@ -61,6 +48,8 @@
             android:src="@drawable/user"
             android:scaleType="centerInside"
             android:onClick="onNavProfileClick"
+            android:padding="10dp"
+            android:background="@null"
             />
 
 
