--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="20dp"
-                android:text="Do you have an account? "
+                android:text="You don't have an account? "
                 android:paddingBottom="20dp"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -122,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
-                android:onClick="goToSignUp"
+                android:onClick="goToOrgOrActActivity"
                 android:paddingTop="20dp"
                 android:text="@string/create_new_account"
                 android:paddingBottom="20dp"
@@ -131,6 +131,38 @@
                 android:textSize="12sp" />
 
         </LinearLayout>
+
+       <!-- <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/doaccounthaveorgan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp"
+                android:text="Are you an Organization? "
+                android:paddingBottom="20dp"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/createnewaccountorgan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:onClick="goToSignUpOrgan"
+                android:paddingTop="20dp"
+                android:text="@string/create_new_account_organ"
+                android:paddingBottom="20dp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:textSize="12sp" />
+
+        </LinearLayout>-->
 
     </LinearLayout>
 
