--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:hint="Email"
             android:textSize="14sp"
+            android:singleLine="true"
             android:background="@drawable/edittext_background"
             android:padding="12dp"
             android:layout_marginBottom="15dp"/>
@@ -50,7 +51,7 @@
             android:layout_height="wrap_content"
             android:hint="Password"
             android:textSize="14sp"
-
+            android:singleLine="true"
             android:background="@drawable/edittext_background"
             android:padding="12dp"
             android:inputType="textPassword"
@@ -61,6 +62,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:textSize="14sp"
+            android:singleLine="true"
             android:hint="Name"
             android:background="@drawable/edittext_background"
             android:padding="12dp"
@@ -69,6 +71,7 @@
         <EditText
             android:id="@+id/signup_age"
             android:layout_width="300dp"
+            android:singleLine="true"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:hint="Age"
@@ -80,6 +83,7 @@
             android:id="@+id/signup_region"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:textSize="14sp"
             android:hint="Region"
             android:background="@drawable/edittext_background"
@@ -91,6 +95,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:textSize="14sp"
+            android:singleLine="true"
             android:hint="City"
             android:background="@drawable/edittext_background"
             android:padding="12dp"
