--- a/app/src/main/res/layout/fragment_onboarding1.xml
+++ b/app/src/main/res/layout/fragment_onboarding1.xml
@@ -1,14 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OnboardingFragment1">
+    android:background="@drawable/gradient_background"
+    tools:context=".MainActivity">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Welcome to Acteen!"
+            android:textColor="@color/black"
+            android:textSize="29sp"
+            android:textStyle="bold"
+             />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="209dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginBottom="10dp"
+            app:srcCompat="@drawable/screenshot_2023_06_25_at_18_35_1" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Find an Opportunity!"
+            android:textColor="@color/black"
+            android:textSize="29sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="We’ve got a collection of over 100 activism opportunities for you to choose from!"
+            android:textColor="@color/gray"
+            android:textSize="15sp"
+            android:textAlignment="center"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="0dp" />
+
+
+        <ImageButton
+            android:background="@null"
+            android:id="@+id/nav_home"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/pagination1"
+            />
+
+
+
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
